--- a/3.1 Express Server/3.3 Postman/package.json
+++ b/3.1 Express Server/3.3 Postman/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "3.1-express-server",
+  "name": "3.3-postman",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,8 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.18.2"
   }
 }
