--- a/3.4 Middleware/package.json
+++ b/3.4 Middleware/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "3.1-express-server",
+  "name": "3.3-middleware",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,8 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "body-parser": "^1.20.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
