--- a/3.5 Secrets Project/package.json
+++ b/3.5 Secrets Project/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "3.1-express-server",
+  "name": "3.5-joke-maker-project",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,8 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
   }
 }
